--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secreto</title>
+    <title>Mis dibujos</title>
+    <link rel="stylesheet" href="estilos.css">
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            min-height: 100vh; /* 100% de la altura de la ventana */
+            display: flex;
+            flex-direction: column;
+        }
+
+        .contenido {
+            flex: 1;
+        }
+
+        footer {
+            background-image: linear-gradient(95deg, #95f2f0 0, #73e0e3 25%, #42cbd4 50%, #00b6c6 75%, #00a5bb 100%);
+            padding: 10px;
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
-    <p>Aqui pondre mis dibujos secrrestos</p>
+    <div class="contenido">
+        <h1>Bienvenido a Mi Página</h1>
+        <p>Aqui subire mis dibujos </p>
+    <img src="imgenes/img1.png" width="100px"/>
+    </div>
 </body>
 </html>
