--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
 </head>
 <body>
     <div class="contenido">
-        <h1>Bienvenido a Mi Página</h1>
+        <h1>Bienvenido a Mi Página Secreta</h1>
         <p>Aqui subire mis dibujos </p>
     <img src="imgenes/img1.png" width="100px"/>
+    <img src="imgenes/img2.png" width="100px"/>
+    <img src="imgenes/img3.png" width="100px"/>
+    <img src="imgenes/img4.png" width="100px"/>
+    <img src="imgenes/img5.png" width="100px"/>
     </div>
 </body>
 </html>
