--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <div class="contenido">
         <h1>Bienvenido a Mi Página Secreta</h1>
-        <p>Aqui subire mis dibujos </p>
+        <p>Aqui subire mis dibujos secretos </p>
     <img src="imgenes/img1.png" width="100px"/>
     <img src="imgenes/img2.png" width="100px"/>
     <img src="imgenes/img3.png" width="100px"/>
