--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <img src="imgenes/img3.png" width="100px"/>
     <img src="imgenes/img4.png" width="100px"/>
     <img src="imgenes/img5.png" width="100px"/>
+    <img src="imgenes/img6.png" width="100px"/>
+    <img src="imgenes/img7.png" width="100px"/>
     </div>
 </body>
 </html>
